# flexfolio

./: .gitignore  .pylintrc  Dockerfile  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
flexfolio/: __init__.py  cli.py  flex_statement.py  utils.py
tests/: reports.py  test_flex_statement.py
