[metadata]
name = flexfolio
summary = IB FlexStatement to PyFolio bridge
description-file =
    README.rst
author = otto-von-bivouac
author-email = otto@xridge.io
home-page = https://github.com/xridge/flexfolio
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.5
keywords = flexfolio
[entry_points]
console_scripts =
    flexfolio = flexfolio.cli:main

[files]
packages = flexfolio
extra-files = flexfolio/py.typed

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']
